Closed
Bug 1050064
Opened 12 years ago
Closed 12 years ago
WMFMediaDataDecoder completely fails on HE-AAC streams
Categories
(Core :: Audio/Video, defect)
Tracking
()
RESOLVED
FIXED
mozilla34
People
(Reporter: cpearce, Assigned: cpearce)
References
Details
Attachments
(1 file)
|
3.05 KB,
patch
|
padenot
:
review+
|
Details | Diff | Splinter Review |
STR:
1. Pref on MP4Reader on Windows.
2. Open http://www-tvline-com.vimg.net/streaming/tvline/MAA101-Medianet.mp4 in video document.
3. observe video plays but no audio.
The audio stream is HE-AAC. We can kind of play this with the WMFReader (bug 875644) but we completely fail in the MP4Reader.
The higher level fix in the MP4Reader will be done in bug 1047180, but the WMF MediaDataDecoder needs to work for the fix in bug 1047180 to work on Windows.
| Assignee | ||
Comment 1•12 years ago
|
||
Reconfigure output type of AAC decoder on stream change. This means the decoder starts giving us more data after it detects HE-AAC SBS/PS. We're still getting twice as many samples as the AudioStream expects, we'll fix that in Bug 1047180.
Attachment #8469003 -
Flags: review?(paul)
Updated•12 years ago
|
Comment 2•12 years ago
|
||
Comment on attachment 8469003 [details] [diff] [review]
Patch
Review of attachment 8469003 [details] [diff] [review]:
-----------------------------------------------------------------
Sorry for the delay !
Attachment #8469003 -
Flags: review?(paul) → review+
| Assignee | ||
Comment 3•12 years ago
|
||
Comment 4•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla34
You need to log in
before you can comment on or make changes to this bug.
Description
•