Bug 1050064 - Reconfigure WMFAACDecoder on stream change. r=padenot