content/media/fmp4/wmf/WMFAudioMFTManager.h
@@ -31,12 +31,14 @@ public:
                          nsAutoPtr<MediaData>& aOutput) MOZ_OVERRIDE;
 private:
 
+  HRESULT UpdateOutputType();
+
   // IMFTransform wrapper that performs the decoding.
   RefPtr<MFTDecoder> mDecoder;
 
-  const uint32_t mAudioChannels;
+  uint32_t mAudioChannels;
   const uint32_t mAudioBytesPerSample;
-  const uint32_t mAudioRate;
+  uint32_t mAudioRate;
   nsTArray<BYTE> mUserData;
 
   // The offset, in audio frames, at which playback started since the
